Finalize navigation design for desktop/mobile, fix logo visibility, and match Lifer aesthetic

--- a/public/css/lifer-webflow.css
+++ b/public/css/lifer-webflow.css
@@ -3120,8 +3120,8 @@ h6 {
 }
 
 .nav_menu-toggle {
-  justify-content: flex-end;
-  align-items: stretch;
+  justify-content: space-between;
+  align-items: center;
   width: 100%;
   padding: .43rem;
   display: flex;
@@ -3849,9 +3849,7 @@ h6 {
   flex: none;
   align-items: center;
   display: flex;
-  position: absolute;
-  inset: 50% auto auto .4375rem;
-  transform: translate(0, -50%);
+  position: relative;
 }
 
 .preloader {
@@ -4396,9 +4394,10 @@ h6 {
   cursor: pointer;
   background-color: #fff;
   border-radius: 1rem;
-  width: auto;
+  width: 100%;
+  max-width: 29rem;
   position: absolute;
-  inset: 0% 0% auto;
+  inset: 0% auto auto 0%;
 }
 
 .stage-inner {
@@ -6388,9 +6387,13 @@ h6 {
 
   .nav_menu-list {
     height: 100%;
-    padding-top: 9.125rem;
-    padding-left: 2rem;
-    padding-right: 2rem;
+    padding-top: 5rem;
+    padding-bottom: 3rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
   }
 
   .padding-left {
@@ -6762,6 +6765,12 @@ h6 {
 
   #w-node-_857ee776-0ced-0c85-031e-cb8631e11f5f-3acdfb3d {
     justify-self: center;
+  }
+}
+
+@media screen and (max-width: 479px) {
+  .nav_button.is-mob {
+    display: none !important;
   }
 }
 
